Bug 294905 - Drag-and-dropping of two selection masks to the root layer crashes Krita
Summary: Drag-and-dropping of two selection masks to the root layer crashes Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-27 07:51 UTC by Dmitry Kazakov
Modified: 2019-05-10 06:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2012-02-27 07:51:49 UTC
We must use KisNode::allowAsChild() mechanism in KisNodeManager instead of hardcoding checks in every slot.
Comment 1 Halla Rempt 2012-02-29 10:51:06 UTC
Bah, yes -- I can still reproduce this.
Comment 2 Dmitry Kazakov 2012-02-29 10:54:27 UTC
Git commit 839aac98b99644c91067e9280b79e6d071636ff0 by Dmitry Kazakov.
Committed on 29/02/2012 at 12:53.
Pushed by dkazakov into branch 'master'.

Fix dropping of Selection Masks onto the root layer

Now it is possible only in case there is no global selection present.

TODO: port the methods of KisLayerBox coupled with KisNodeManager to
check the possibility of moving a node through the allowAsChildMechanism()
instead of hardicong checks.

M  +4    -1    krita/image/kis_group_layer.cc
M  +13   -10   krita/ui/kis_node_model.cpp
M  +1    -1    krita/ui/kis_node_model.h
M  +5    -1    krita/ui/kis_selection_manager.cc

http://commits.kde.org/calligra/839aac98b99644c91067e9280b79e6d071636ff0
Comment 3 Halla Rempt 2019-05-10 06:49:48 UTC
Git commit 52f9b10aed1da0cb79b0b80764a936f17705fb97 by Boudewijn Rempt.
Committed on 10/05/2019 at 06:49.
Pushed by rempt into branch 'master'.

Fix KisGroupLayer::allowAsChild properly

M  +12   -4    libs/image/kis_group_layer.cc

https://invent.kde.org/kde/krita/commit/52f9b10aed1da0cb79b0b80764a936f17705fb97