Fix dropping of Selection Masks onto the root layer

Now it is possible only in case there is no global selection present.

TODO: port the methods of KisLayerBox coupled with KisNodeManager to
check the possibility of moving a node through the allowAsChildMechanism()
instead of hardicong checks.

BUG:294905